Alterações de responsividade

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="static\css\media.css">
 </head>
 <body>
-    <nav id="navbar">
+    <!-- <nav id="navbar">
         <div class="nav-fundo"></div>
         <div class="nav-real">
             <span id="hamburguer" class="material-symbols-outlined">menu</span>
@@ -265,10 +265,10 @@
                 </div>
             </div>
         </section>
-    </article>
+    </article> -->
 
     <article class="seção reveal" id="estatuto">
-        <h2 class="titulo"><img src="static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto"> Estatuto da Criança e do adolescente<img src="static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto2"></h2>
+        <h2 class="titulo"><img src="static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto"><span>Estatuto da Criança e do Adolescente</span><img src="static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto2"></h2>
         <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, ipsa? Vitae, nesciunt, provident molestiae velit unde repudiandae nihil, voluptate veniam nostrum ipsum sequi id expedita. Ipsam ipsa in natus itaque?
         Dolorum voluptatem tempore, cupiditate rerum esse voluptate recusandae aliquid eligendi quod minus. Blanditiis voluptatibus accusantium obcaecati necessitatibus atque incidunt maxime, itaque, commodi vitae quidem quibusdam aspernatur consequatur nemo ducimus quod?</p>
     
@@ -288,7 +288,7 @@
         </div>    
     </article>
 
-    <article class="seção" id="recursos">
+    <!-- <article class="seção" id="recursos">
         <div>
             <h2 class="titulo">Recursos</h2>
             <p class="texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae debitis ipsum quam architecto consectetur ex eaque iusto est soluta incidunt magni, quis voluptas quas sequi illum beatae officiis sed nobis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam error quam obcaecati pariatur voluptate explicabo fugiat eum omnis aut at suscipit temporibus repellat laudantium officia, numquam dolorum sed quis dignissimos!</p>
@@ -376,7 +376,7 @@
             <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea officia placeat ullam inventore nemo, numquam nulla ducimus minus laborum debitis amet, quo velit accusamus! Non nam at fugit ipsa corrupti?</p>
             <button>Fechar</button>
         </div>
-    </div>
+    </div> -->
 
     <script src="static/js/script.js"></script>
 </body>
