reestruturação e responsividade do footer

--- a/index.html
+++ b/index.html
@@ -356,15 +356,19 @@
 
     <footer>
         <div class="footerText">
+
             <div class="esquerda">
                 <h1>Inscreva-se na nossa Newsletter!</h1>
                 <input type="text" class="inputNew" placeholder="pipipipopopo@gmail.com">
-                <button class="ButtonNew">Inscrever-se</button>
+                <button>Inscrever-se</button>
             </div>
             <div class="direita">
-                <img src="../seguranca-jovens-prototipo/static/img/logo.png" alt="" class="imgFooter">
-                <h3 class="titulo">Nome site</h3>
+                <div>
+                    <img src="../seguranca-jovens-prototipo/static/img/logo.png" alt="">
+                    <h3 class="titulo">Nome site</h3>
+                </div>
             </div>
+
         </div>
     </footer>
 
