Responsividade de recursos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="static\css\media.css">
 </head>
 <body>
-    <nav id="navbar">
+    <!-- <nav id="navbar">
         <div class="nav-fundo"></div>
         <div class="nav-real">
             <span id="hamburguer" class="material-symbols-outlined">menu</span>
@@ -286,7 +286,7 @@
         <div>
             <hr class="linha-divisao">
         </div>    
-    </article>
+    </article> -->
 
     <article class="seção" id="recursos">
         <div>
@@ -351,10 +351,14 @@
                 </div>
                 <button class="flechas-recursos frente"><span class="material-symbols-outlined">arrow_forward_ios</span></button>
             </div>
+            <div class="botoes-extra">
+                <button class="tras"><span class="material-symbols-outlined">arrow_back_ios</span></button>
+                <button class="frente"><span class="material-symbols-outlined">arrow_forward_ios</span></button>
+            </div>
         </div>    
     </article>
 
-    <footer>
+    <!-- <footer>
         <div class="footerText">
 
             <div class="esquerda">
@@ -378,7 +382,7 @@
             <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea officia placeat ullam inventore nemo, numquam nulla ducimus minus laborum debitis amet, quo velit accusamus! Non nam at fugit ipsa corrupti?</p>
             <button>Fechar</button>
         </div>
-    </div>
+    </div> -->
 
     <script src="static/js/script.js"></script>
 </body>
