Correção de comentários

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="static\css\media.css">
 </head>
 <body>
-    <!-- <nav id="navbar">
+    <nav id="navbar">
         <div class="nav-fundo"></div>
         <div class="nav-real">
             <span id="hamburguer" class="material-symbols-outlined">menu</span>
@@ -286,7 +286,7 @@
         <div>
             <hr class="linha-divisao">
         </div>    
-    </article> -->
+    </article>
 
     <article class="seção" id="recursos">
         <div>
@@ -358,7 +358,7 @@
         </div>    
     </article>
 
-    <!-- <footer>
+    <footer>
         <div class="footerText">
 
             <div class="esquerda">
@@ -382,7 +382,7 @@
             <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea officia placeat ullam inventore nemo, numquam nulla ducimus minus laborum debitis amet, quo velit accusamus! Non nam at fugit ipsa corrupti?</p>
             <button>Fechar</button>
         </div>
-    </div> -->
+    </div>
 
     <script src="static/js/script.js"></script>
 </body>
