Responsividade do rodapé e do modal

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="conteudo">
                     <h3>Conscientização</h3>
                     <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
-                    <button>Saiba mais</button>
+                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -79,7 +79,7 @@
                 <div class="conteudo">
                     <h3>Controle de conteúdo</h3>
                     <p>Responsáveis devem monitorar o acesso de crianças para evitar conteúdos inadequados.</p>
-                    <button>Saiba mais</button>
+                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -93,7 +93,7 @@
                 <div class="conteudo">
                     <h3>Controle de tempo</h3>
                     <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
-                    <button>Saiba mais</button>
+                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -107,7 +107,7 @@
                 <div class="conteudo">
                     <h3>Mediação ativa</h3>
                     <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
-                    <button>Saiba mais</button>
+                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -121,7 +121,7 @@
                 <div class="conteudo">
                     <h3>Mediação restritiva</h3>
                     <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
-                    <button>Saiba mais</button>
+                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -135,7 +135,7 @@
                 <div class="conteudo">
                     <h3>Mediação técnica</h3>
                     <p>Uso de softwares para restringir e monitorar atividades de crianças online.</p>
-                    <button>Saiba mais</button>
+                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -149,7 +149,7 @@
                 <div class="conteudo">
                     <h3>Monitoramento</h3>
                     <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
-                    <button>Saiba mais</button>
+                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -163,7 +163,7 @@
                 <div class="conteudo">
                     <h3>Proteção de dados e privacidade</h3>
                     <p>Resumo do conceito. Resumo do conceito. Resumo do conceito.</p>
-                    <button>Saiba mais</button>
+                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -177,7 +177,7 @@
                 <div class="conteudo">
                     <h3>Registro de atividades</h3>
                     <p>Banco de dados onde pais monitoram e bloqueiam sites acessados por crianças.</p>
-                    <button>Saiba mais</button>
+                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -191,7 +191,7 @@
                 <div class="conteudo">
                     <h3>Responsabilidade parental</h3>
                     <p>Conhecimento dos riscos para evitar a exposição de menores na internet.</p>
-                    <button>Saiba mais</button>
+                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -217,25 +217,25 @@
                     <div class="conteudo">
                         <h3>Exposição de conteúdo indevido</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
-                        <button>Saiba mais</button>
+                        <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                     </div>
-                    <img width="100" height="350" src="static/img/riscos/pexels-sharefaith-491036-1231215.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="350" src="static/img/riscos/pexels-sharefaith-491036-1231215.jpg" alt="">
                 </div>
                 <div class="risco">
                     <div class="conteudo">
                         <h3>Acesso à informações privadas</h3>
                         <p>A falta de monitoramento online expõe dados privados, por isso, é essencial a supervisão ou ferramentas de mediação para proteção.</p>
-                        <button>Saiba mais</button>
+                        <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                     </div>
-                    <img width="100" height="300" src="static/img/riscos/640-little-girl-playing-with-soap-bubbles-of-autumn-leaves-in-the-park.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="300" src="static/img/riscos/640-little-girl-playing-with-soap-bubbles-of-autumn-leaves-in-the-park.jpg" alt="">
                 </div>
                 <div class="risco">
                     <div class="conteudo">
                         <h3>Uso excessivo da internet</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
-                        <button>Saiba mais</button>
+                        <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                     </div>
-                    <img width="100" height="300" src="static/img/riscos/4anos_da_crianca-just_real_moms-1.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="300" src="static/img/riscos/4anos_da_crianca-just_real_moms-1.jpg" alt="">
                 </div>
             </div>
             <div class="direita">
@@ -243,25 +243,25 @@
                     <div class="conteudo">
                         <h3>Risco de lorem</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
-                        <button>Saiba mais</button>
+                        <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                     </div>
-                    <img width="100" height="400" src="static/img/riscos/como-convencer-a-crianca-usar-oculos.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="400" src="static/img/riscos/como-convencer-a-crianca-usar-oculos.jpg" alt="">
                 </div>
                 <div class="risco">
                     <div class="conteudo">
                         <h3>Risco de lorem</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
-                        <button>Saiba mais</button>
+                        <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                     </div>
-                    <img width="100" height="300" src="static/img/riscos/criancas-marista.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="300" src="static/img/riscos/criancas-marista.jpg" alt="">
                 </div>
                 <div class="risco">
                     <div class="conteudo">
                         <h3>Risco de lorem</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero...</p>
-                        <button>Saiba mais</button>
+                        <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
                     </div>
-                    <img width="100" height="250" src="static/img/riscos/blog-saiba-como-encorajar-a-curiosidade-nas-criancas.jpg" alt="">
+                    <img onclick="abrirModal('titulo', 'texto')" width="100" height="250" src="static/img/riscos/blog-saiba-como-encorajar-a-curiosidade-nas-criancas.jpg" alt="">
                 </div>
             </div>
         </section>
