--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             </div>
             <div class="direita">
                 <div>
-                    <img src="../seguranca-jovens-prototipo/static/img/logo.png" alt="">
+                    <img src="static/img/logo.png" alt="">
                     <h3 class="titulo">Nome site</h3>
                 </div>
             </div>
@@ -384,6 +384,10 @@
         </div>
     </div>
 
-    <script src="static/js/script.js"></script>
+    <script src="static/js/navbar.js"></script>
+    <script src="static/js/revelacao.js"></script>
+    <script src="static/js/recursos.js"></script>
+    <script src="static/js/modal.js"></script>
+    <script src="static/js/estatuto.js"></script>
 </body>
 </html>
