--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
         <div class="footerText">
 
             <div class="esquerda">
-                <h1>Inscreva-se na nossa Newsletter!</h1>
+                <h4>Inscreva-se na nossa Newsletter!</h4>
                 <input type="text" class="inputNew" placeholder="pipipipopopo@gmail.com">
                 <button>Inscrever-se</button>
             </div>
@@ -372,6 +372,7 @@
                     <img src="static/img/logo.png" alt="">
                     <h3 class="titulo">Nome site</h3>
                 </div>
+                <a href="login.html" class="restrito"><span class="material-symbols-outlined">lock</span><span>Área Restrita</span></a>
             </div>
 
         </div>
