--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
     <link rel="icon" href="static/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="static\css\geral.css">
@@ -22,5 +22,18 @@
             <button>Entrar</button>
         </div>
     </div>
+    
+    <div id="login-modal">
+        <div class="container">
+            <span class="material-symbols-outlined">error</span>
+            <div class="texto-modal">
+                <h5>Erro</h5>
+                <p>Não autorizado. Confira suas credenciais.</p>
+            </div>
+            <span class="material-symbols-outlined fechar">close</span>
+        </div>
+    </div>
+    
+    <script src="static/js/login.js"></script>
 </body>
 </html>
