Atualização do modal

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="static\css\riscos.css">
     <link rel="stylesheet" href="static\css\footer.css">
     <link rel="stylesheet" href="static\css\modal.css">
+    <link rel="stylesheet" href="static\css\status-modal.css">
     <link rel="stylesheet" href="static\css\chat.css">
     <link rel="stylesheet" href="static\css\media.css">
 </head>
@@ -364,7 +365,7 @@
 
             <div class="esquerda">
                 <h4>Inscreva-se na nossa Newsletter!</h4>
-                <input type="text" class="inputNew" placeholder="pipipipopopo@gmail.com">
+                <input type="text" class="inputNew" placeholder="E-mail">
                 <button>Inscrever-se</button>
             </div>
             <div class="direita">
@@ -383,6 +384,17 @@
             <h3 class="titulo">Título</h3>
             <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea officia placeat ullam inventore nemo, numquam nulla ducimus minus laborum debitis amet, quo velit accusamus! Non nam at fugit ipsa corrupti?</p>
             <button>Fechar</button>
+        </div>
+    </div>
+
+    <div id="status-modal">
+        <div class="container">
+            <span class="material-symbols-outlined">error</span>
+            <div class="texto-modal">
+                <h5>Erro</h5>
+                <p>Não autorizado. Confira suas credenciais.</p>
+            </div>
+            <span class="material-symbols-outlined fechar">close</span>
         </div>
     </div>
 
@@ -408,8 +420,10 @@
     <script src="static/js/navbar.js"></script>
     <script src="static/js/revelacao.js"></script>
     <script src="static/js/recursos.js"></script>
+    <script src="static/js/estatuto.js"></script>
+    <script src="static/js/status-modal.js"></script>
     <script src="static/js/modal.js"></script>
     <script src="static/js/chat.js"></script>
-    <script src="static/js/estatuto.js"></script>
+    <script src="static/js/newsletter.js"></script>
 </body>
 </html>
