--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="static/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="static\css\geral.css">
     <link rel="stylesheet" href="static\css\login.css">
+    <link rel="stylesheet" href="static\css\status-modal.css">
     <link rel="stylesheet" href="static\css\media.css">
 </head>
 <body>
@@ -23,7 +24,7 @@
         </div>
     </div>
     
-    <div id="login-modal">
+    <div id="status-modal">
         <div class="container">
             <span class="material-symbols-outlined">error</span>
             <div class="texto-modal">
@@ -34,6 +35,7 @@
         </div>
     </div>
     
+    <script src="static/js/status-modal.js"></script>
     <script src="static/js/login.js"></script>
 </body>
 </html>
