--- a/newsletter-menu.html
+++ b/newsletter-menu.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Newsletter</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+    <link rel="icon" href="static/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="static\css\geral.css">
+    <link rel="stylesheet" href="static\css\newsletter.css">
+    <link rel="stylesheet" href="static\css\media.css">
 </head>
 <body>
-    
+    <nav id="nav-newsletter">
+        <!-- <button class="voltar">
+            <span class="material-symbols-outlined icone-botao">arrow_back</span>
+        </button> -->
+        <div class="logo">
+            <img src="static/img/logo.png" alt="">
+            <h1>Lorem ipsum</h1>
+        </div>
+        <button class="novo-email">
+            <span>Novo e-mail</span>
+            <span class="material-symbols-outlined icone-botao">add</span>
+        </button>
+    </nav>
 </body>
 </html>
