Lista de e-mails

--- a/newsletter-menu.html
+++ b/newsletter-menu.html
@@ -24,5 +24,60 @@
             <span class="material-symbols-outlined icone-botao">add</span>
         </button>
     </nav>
+    <main id="menu-newsletter">
+        <h2>Newsletter</h2>
+        <div class="emails">
+            <div class="email novo-email">
+                <span class="material-symbols-outlined icone">mail</span>
+                <h3>Novo e-mail</h3>
+                <span class="material-symbols-outlined status">add</span>
+            </div>
+            <div class="email">
+                <span class="material-symbols-outlined icone">mail</span>
+                <h3>Título</h3>
+                <span class="material-symbols-outlined status">edit</span>
+            </div>
+            <div class="email">
+                <span class="material-symbols-outlined icone">mail</span>
+                <h3>Título</h3>
+                <span class="material-symbols-outlined status">check</span>
+            </div>
+            <div class="email">
+                <span class="material-symbols-outlined icone">mail</span>
+                <h3>Título</h3>
+                <span class="material-symbols-outlined status">check</span>
+            </div>
+            <div class="email">
+                <span class="material-symbols-outlined icone">mail</span>
+                <h3>Título</h3>
+                <span class="material-symbols-outlined status">check</span>
+            </div>
+            <div class="email">
+                <span class="material-symbols-outlined icone">mail</span>
+                <h3>Título</h3>
+                <span class="material-symbols-outlined status">check</span>
+            </div>
+            <div class="email">
+                <span class="material-symbols-outlined icone">mail</span>
+                <h3>Título</h3>
+                <span class="material-symbols-outlined status">check</span>
+            </div>
+            <div class="email">
+                <span class="material-symbols-outlined icone">mail</span>
+                <h3>Título</h3>
+                <span class="material-symbols-outlined status">check</span>
+            </div>
+            <div class="email">
+                <span class="material-symbols-outlined icone">mail</span>
+                <h3>Título</h3>
+                <span class="material-symbols-outlined status">check</span>
+            </div>
+            <div class="email">
+                <span class="material-symbols-outlined icone">mail</span>
+                <h3>Título</h3>
+                <span class="material-symbols-outlined status">check</span>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
