Modal para cadastro

--- a/index.html
+++ b/index.html
@@ -421,9 +421,9 @@
     <script src="static/js/revelacao.js"></script>
     <script src="static/js/recursos.js"></script>
     <script src="static/js/estatuto.js"></script>
+    <script src="static/js/footer.js"></script>
     <script src="static/js/status-modal.js"></script>
     <script src="static/js/modal.js"></script>
     <script src="static/js/chat.js"></script>
-    <script src="static/js/newsletter.js"></script>
 </body>
 </html>
