--- a/newsletter-menu.html
+++ b/newsletter-menu.html
@@ -79,5 +79,17 @@
             </div>
         </div>
     </main>
+    <div id="newsletter-modal">
+        <div class="container">
+            <span class="material-symbols-outlined fechar">close</span>
+            <h4>Criar novo e-mail</h4>
+            <div class="campo">
+                <label for="titulo">Título do e-mail</label>
+                <input type="text" name="titulo">
+            </div>
+            <button>Criar</button>
+        </div>
+    </div>
+    <script src="static/js/modal-newsletter.js"></script>
 </body>
 </html>
