Funcionamento do modal de cadastro

--- a/newsletter-menu.html
+++ b/newsletter-menu.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="static/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="static\css\geral.css">
     <link rel="stylesheet" href="static\css\newsletter.css">
+    <link rel="stylesheet" href="static\css\status-modal.css">
     <link rel="stylesheet" href="static\css\media.css">
 </head>
 <body>
@@ -90,6 +91,17 @@
             <button>Criar</button>
         </div>
     </div>
+    <div id="status-modal">
+        <div class="container">
+            <span class="material-symbols-outlined">error</span>
+            <div class="texto-modal">
+                <h5>Erro</h5>
+                <p>Não autorizado. Confira suas credenciais.</p>
+            </div>
+            <span class="material-symbols-outlined fechar">close</span>
+        </div>
+    </div>
     <script src="static/js/modal-newsletter.js"></script>
+    <script src="static/js/status-modal.js"></script>
 </body>
 </html>
