atualização dos textos do site

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
     <article class="seção reveal" id="introdução" >
         <h2 class="titulo">Introdução</h2>
-        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae maxime adipisci, molestias, iste sapiente tempore placeat error quae itaque incidunt quidem doloremque! Voluptate adipisci excepturi eum neque molestiae et! Quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo necessitatibus mollitia animi dolor temporibus quos dolore fugiat, saepe suscipit excepturi, dicta, aliquam provident eum corrupti exercitationem doloremque officiis hic id!</p>
+        <p class="texto">O acesso à internet tornou-se parte essencial do cotidiano de crianças e adolescentes, oferecendo oportunidades valiosas de aprendizado, socialização e entretenimento. No entanto, essa exposição também traz desafios consideráveis, como o risco de acesso a conteúdos inadequados, cyberbullying, e até mesmo o roubo de dados pessoais. Tais riscos podem afetar negativamente o desenvolvimento emocional e psicológico dos jovens.</p>
+        <p class="texto">Por isso, garantir a segurança digital dos menores é um aspecto crucial na educação moderna. Além do monitoramento das atividades online, é fundamental que sejam adotadas ferramentas de controle parental, que permitam restringir o acesso a conteúdos prejudiciais, bem como reforçar a conscientização sobre os perigos da internet. Esses cuidados ajudam a criar um espaço digital mais seguro, onde os jovens podem explorar e aprender de maneira positiva e protegida.</p>    
     </article>
 
     <article class="seção reveal" id="aspectos">
@@ -81,7 +82,7 @@
                 <div class="conteudo">
                     <h3>Controle de conteúdo</h3>
                     <p>Responsáveis devem monitorar o acesso de crianças para evitar conteúdos inadequados.</p>
-                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
+                    <button onclick="abrirModal('Controle de conteúdo', 'Considerando que crianças e adolescentes podem, com facilidade, se expor a conteúdos impróprios ou prejudiciais no ambiente digital, torna-se fundamental que seus responsáveis adotem uma postura vigilante em relação ao tipo de material acessado. Essa atenção deve ser complementada pelo uso de ferramentas e estratégias que permitam o controle e a filtragem de conteúdo, garantindo que as interações online sejam adequadas à faixa etária e contribuam positivamente para o desenvolvimento educacional, emocional e social dos jovens.')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -137,7 +138,7 @@
                 <div class="conteudo">
                     <h3>Mediação técnica</h3>
                     <p>Uso de softwares para restringir e monitorar atividades de crianças online.</p>
-                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
+                    <button onclick="abrirModal('Mediação técnica', 'Adoção de softwares especializados e recursos tecnológicos avançados para restringir, bloquear, filtrar e monitorar as atividades de crianças em ambientes digitais. Esses meios permitem uma gestão personalizada e segura do acesso à internet, protegendo os menores de conteúdos inadequados, interações potencialmente perigosas e exposições indesejadas, ao mesmo tempo em que possibilitam aos responsáveis acompanhar o uso das plataformas de forma prática e eficaz, promovendo um equilíbrio entre liberdade e segurança no mundo digital.')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -179,7 +180,7 @@
                 <div class="conteudo">
                     <h3>Registro de atividades</h3>
                     <p>Banco de dados onde pais monitoram e bloqueiam sites acessados por crianças.</p>
-                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
+                    <button onclick="abrirModal('Registro de atividades', 'Um sistema abrangente de gerenciamento parental que permite aos pais monitorar detalhadamente os sites acessados pelas crianças, fornecendo informações claras e organizadas sobre o histórico de navegação. Além disso, a ferramenta oferece a possibilidade de aplicar bloqueios ou restrições personalizadas com base nos conteúdos identificados, promovendo um ambiente online mais seguro e adequado às necessidades de cada família.')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -193,7 +194,7 @@
                 <div class="conteudo">
                     <h3>Responsabilidade parental</h3>
                     <p>Conhecimento dos riscos para evitar a exposição de menores na internet.</p>
-                    <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
+                    <button onclick="abrirModal('Responsabilidade parental', 'Desenvolver um conhecimento abrangente e atualizado sobre os diversos riscos que envolvem a exposição de menores na internet, como conteúdos inadequados, interações perigosas e violações de privacidade. O objetivo é não apenas identificar esses perigos, mas também promover a conscientização e implementar estratégias preventivas eficazes, assegurando um ambiente digital mais seguro, educativo e alinhado ao bem-estar e ao desenvolvimento saudável das crianças.')">Saiba mais</button>
                 </div>
                 <div class="espaco">
                     <span></span>
@@ -227,7 +228,7 @@
                     <div class="conteudo">
                         <h3>Acesso à informações privadas</h3>
                         <p>A falta de monitoramento online expõe dados privados, por isso, é essencial a supervisão ou ferramentas de mediação para proteção.</p>
-                        <button onclick="abrirModal('titulo', 'texto')">Saiba mais</button>
+                        <button onclick="abrirModal('Acesso à informações privadas', 'O acesso a informações privadas dos usuários é um dos riscos associados à exposição não monitorada da internet. Sem a proteção necessária, informações como localização e dados pessoais podem ser facilmente coletadas e utilizadas de forma inadequada. Assim, é importante o uso acompanhado da internet ou de ferramentas de mediação para evitar a exposição de informações privadas.')">Saiba mais</button>
                     </div>
                     <img onclick="abrirModal('titulo', 'texto')" width="100" height="300" src="static/img/riscos/640-little-girl-playing-with-soap-bubbles-of-autumn-leaves-in-the-park.jpg" alt="">
                 </div>
@@ -271,12 +272,11 @@
 
     <article class="seção reveal" id="estatuto">
         <h2 class="titulo"><img src="static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto"><span>Estatuto da Criança e do Adolescente</span><img src="static/img/estatuto/riscos-titulo.png" alt="" id="riscos-titulo-estatuto2"></h2>
-        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, ipsa? Vitae, nesciunt, provident molestiae velit unde repudiandae nihil, voluptate veniam nostrum ipsum sequi id expedita. Ipsam ipsa in natus itaque?
-        Dolorum voluptatem tempore, cupiditate rerum esse voluptate recusandae aliquid eligendi quod minus. Blanditiis voluptatibus accusantium obcaecati necessitatibus atque incidunt maxime, itaque, commodi vitae quidem quibusdam aspernatur consequatur nemo ducimus quod?</p>
+        <p class="texto">O Estatuto da Criança e do Adolescente (ECA), instituído pela Lei nº 8.069, de 1990, é um marco legal que assegura os direitos fundamentais de crianças e adolescentes no Brasil. Ele estabelece um conjunto de normas e diretrizes voltadas para a proteção, a educação, a saúde, a liberdade e o desenvolvimento integral dos jovens, garantindo que sejam tratados com dignidade e respeito. O ECA também aborda a responsabilidade da sociedade, da família e do Estado em assegurar essas condições, além de prever medidas para combater abusos e negligência. Com base no princípio da proteção integral, esse estatuto visa promover um ambiente seguro e saudável para o crescimento e a participação ativa de crianças e adolescentes na sociedade.</p>
     
         <div class="conteudo-estatuto">
             <div id="art4">
-                <p class="texto"><b>Art. 4º</b> É dever da família, da comunidade, da sociedade em geral e do poder público assegurar, com absoluta prioridade, a efetivação dos direitos referentes à vida, à saúde, à alimentação, à educação, ao esporte, ao lazer, à profissionalização, à cultura, à dignidade, ao respeito, à liberdade e à convivência familiar e comunitária</p>
+                <p class="texto"><b>Art. 4º</b> É dever da família, da comunidade, da sociedade em geral e do poder público assegurar, com absoluta prioridade, a efetivação dos direitos referentes à vida, à saúde, à alimentação, à educação, ao esporte, ao lazer, à profissionalização, à cultura, à dignidade, ao respeito, à liberdade e à convivência familiar e comunitária.</p>
             </div>
             <div id="imagens-estatuto">
                 <img src="static/img/estatuto/imagens-estatuto.png" alt="" id="livro-estatuto">
@@ -293,11 +293,11 @@
     <article class="seção" id="recursos">
         <div>
             <h2 class="titulo">Recursos</h2>
-            <p class="texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae debitis ipsum quam architecto consectetur ex eaque iusto est soluta incidunt magni, quis voluptas quas sequi illum beatae officiis sed nobis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam error quam obcaecati pariatur voluptate explicabo fugiat eum omnis aut at suscipit temporibus repellat laudantium officia, numquam dolorum sed quis dignissimos!</p>
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nesciunt, cupiditate soluta excepturi quaerat officiis deserunt similique non. Provident pariatur maxime culpa possimus, doloribus minima dolor! Sint, odio! Fuga, dolores! Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, neque quam optio tempore qui repellat deserunt at molestias magni. Harum accusamus recusandae itaque ipsam quas dignissimos iusto tempore iste quaerat!</p>
+            <p class="texto">Com o crescente uso da internet por crianças e adolescentes, a adoção de ferramentas para promover um ambiente online seguro se torna essencial. Diversos recursos, como softwares de controle parental, filtros de conteúdo e aplicativos educativos, são fundamentais para proteger os jovens de conteúdos inadequados e interações perigosas. Essas soluções permitem monitorar e restringir o acesso a informações nocivas, garantindo que os jovens possam navegar pela internet de forma segura, saudável e construtiva.</p>       
+            <p class="texto">Abaixo, estão recomendados alguns dos softwares de controle parental mais eficazes e com melhor custo-benefício disponíveis no mercado atualmente. Esses programas oferecem uma variedade de recursos, como bloqueio de sites impróprios, monitoramento de atividades online, relatórios de uso e até mesmo o controle do tempo de tela. Eles são projetados para ajudar os responsáveis a manter a segurança dos jovens enquanto promovem uma navegação mais consciente e equilibrada. Com opções que atendem a diferentes necessidades e orçamentos, essas ferramentas se destacam pela combinação de funcionalidade, acessibilidade e eficácia.</p>
         </div>
-
-        <div id="carrossel">
+        
+            <div id="carrossel">
             <div class="botões-recursos">
                 <button class="flechas-recursos tras"><span class="material-symbols-outlined">arrow_back_ios</span></button>
                 <div class="colecao-cards">
